Fixing the Providers Image

--- a/src/app/themes/gds-theme.css
+++ b/src/app/themes/gds-theme.css
@@ -82,7 +82,7 @@
   --site-footer-quicklink-text: #ffffff;
   --site-legal-bkg: #01467C;
   --site-legal-text: #ffffff;
-  --site-heading-text: #01579B;
+  --site-heading-text: #1D394F;
   --site-featured-heading-text: #ffffff;
   --site-subnavbar-bkg: #013D6D;
   --site-nav-hover-bkg: #013D6D;
