More Homepage Tweaks

--- a/src/app/themes/gds-theme.css
+++ b/src/app/themes/gds-theme.css
@@ -86,6 +86,7 @@
   --site-featured-heading-text: #ffffff;
   --site-subnavbar-bkg: #013D6D;
   --site-nav-hover-bkg: #013D6D;
+  --site-casino-table-header-bkg: #01579B;
   
   /* Semantic colors */
   --site-secondary-tint: #FF9035;
