--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1040,6 +1040,21 @@
     }
   }
 
+  .dashboard-glass-wrapper {
+    @apply rounded-xl;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    background: rgba(255, 255, 255, 0.36);
+    box-shadow: 0px 0px 12px 0px rgba(63, 230, 252, 0.6);
+    backdrop-filter: blur(6px);
+  }
+  .dashboard-bg {
+    background: linear-gradient(
+      180deg,
+      theme("colors.background.700") 0%,
+      theme("colors.background.500") 100%
+    );
+  }
+
   /* Footer content specific styles */
   .about-site {
     h4 {
